Official release version 5.0.1
Signed-off-by: curtis <salvatore.curti@st.com>

--- a/Projects/STM32F401RE-Nucleo/Examples/BootLoader/BootLoader.ioc
+++ b/Projects/STM32F401RE-Nucleo/Examples/BootLoader/BootLoader.ioc
@@ -17,7 +17,7 @@ Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB3
 Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.0
+Mcu.Pin12=VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.1
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -27,7 +27,7 @@ Mcu.Pin7=PA5
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
 Mcu.PinsNb=13
-Mcu.ThirdParty0=STMicroelectronics.FP-SNS-FLIGHT1.5.0.0
+Mcu.ThirdParty0=STMicroelectronics.FP-SNS-FLIGHT1.5.0.1
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -127,7 +127,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=EWARM V8.50
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-true-HAL-false,false-2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_BootLoader_Init-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0-false-HAL-false,4-MX_BootLoader_Process-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-true-HAL-false,false-2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -159,45 +159,45 @@ RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.BSP.number=3
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.DeviceJjFLIGHT1IiApplications_Checked=true
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.FLIGHT1IiApplicationsCcDeviceJjApplication=BootLoader
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.IPParameters=FLIGHT1IiApplicationsCcDeviceJjApplication
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.STBoard=false
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.api=BSP_COMMON_DRIVER
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.component=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.condition=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.instance=PC13-ANTI_TAMP
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.ip=GPIO
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.mode=EXTI
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.name=BSP BUTTON
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.semaphore=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.solution=PC13-ANTI_TAMP
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.STBoard=false
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.api=BSP_COMMON_DRIVER
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.component=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.condition=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.instance=USART2
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.ip=UART|USART|LPUART
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.mode=Asynchronous
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.name=BSP USART
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.semaphore=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.solution=USART2
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.STBoard=false
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.api=BSP_COMMON_DRIVER
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.component=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.condition=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.instance=PA5
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.ip=GPIO
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.mode=Output
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.name=BSP LED
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.semaphore=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.solution=PA5
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0_SwParameter=FLIGHT1IiApplicationsCcDeviceJjApplication\:BootLoader;
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.BSP.number=3
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.DeviceJjFLIGHT1IiApplications_Checked=true
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.FLIGHT1IiApplicationsCcDeviceJjApplication=BootLoader
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.IPParameters=FLIGHT1IiApplicationsCcDeviceJjApplication
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.STBoard=false
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.api=BSP_COMMON_DRIVER
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.component=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.condition=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.instance=PC13-ANTI_TAMP
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.ip=GPIO
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.mode=EXTI
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.name=BSP BUTTON
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.semaphore=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.solution=PC13-ANTI_TAMP
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.STBoard=false
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.api=BSP_COMMON_DRIVER
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.component=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.condition=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.instance=USART2
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.ip=UART|USART|LPUART
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.mode=Asynchronous
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.name=BSP USART
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.semaphore=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.solution=USART2
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.STBoard=false
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.api=BSP_COMMON_DRIVER
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.component=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.condition=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.instance=PA5
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.ip=GPIO
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.mode=Output
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.name=BSP LED
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.semaphore=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.solution=PA5
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1_SwParameter=FLIGHT1IiApplicationsCcDeviceJjApplication\:BootLoader;
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.0.Mode=DeviceJjFLIGHT1IiApplications
-VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.0.Signal=STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.0
+VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.1.Mode=DeviceJjFLIGHT1IiApplications
+VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.1.Signal=STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F401RE
