--- a/Projects/STM32L476RG-Nucleo/Applications/53L3A2/FLIGHT1/FLIGHT1.ioc
+++ b/Projects/STM32L476RG-Nucleo/Applications/53L3A2/FLIGHT1/FLIGHT1.ioc
@@ -36,14 +36,14 @@ Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin22=VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DataOoExchangeJjSTM32IiMetaDataManager_1.7.0_5.0.0
-Mcu.Pin23=VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.0
-Mcu.Pin24=VP_STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0
-Mcu.Pin25=VP_STMicroelectronics.X-CUBE-TOF1_VS_BoardOoExtensionJj53L3A2_2.0.1_3.2.0
-Mcu.Pin26=VP_STMicroelectronics.X-CUBE-BLEMGR_VS_BluetoothJjBLEOoCore_2.0.0_2.0.0
-Mcu.Pin27=VP_STMicroelectronics.X-CUBE-BLEMGR_VS_BLEIiManagerJjSTM32IiBLEIiManager_1.8.0_2.0.0
-Mcu.Pin28=VP_STMicroelectronics.X-CUBE-BLEMGR_VS_BLEIiFeaturesJjSTM32IiBLEIiManager_1.8.0_2.0.0
-Mcu.Pin29=VP_STMicroelectronics.X-CUBE-BLEMGR_VS_DataOoExchangeJjparson_1.3.1_2.0.0
+Mcu.Pin22=VP_STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0
+Mcu.Pin23=VP_STMicroelectronics.X-CUBE-TOF1_VS_BoardOoExtensionJj53L3A2_2.0.1_3.2.0
+Mcu.Pin24=VP_STMicroelectronics.X-CUBE-BLEMGR_VS_BluetoothJjBLEOoCore_2.0.0_2.0.0
+Mcu.Pin25=VP_STMicroelectronics.X-CUBE-BLEMGR_VS_BLEIiManagerJjSTM32IiBLEIiManager_1.8.0_2.0.0
+Mcu.Pin26=VP_STMicroelectronics.X-CUBE-BLEMGR_VS_BLEIiFeaturesJjSTM32IiBLEIiManager_1.8.0_2.0.0
+Mcu.Pin27=VP_STMicroelectronics.X-CUBE-BLEMGR_VS_DataOoExchangeJjparson_1.3.1_2.0.0
+Mcu.Pin28=VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DataOoExchangeJjSTM32IiMetaDataManager_1.7.0_5.0.1
+Mcu.Pin29=VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.1
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA0
@@ -52,7 +52,7 @@ Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
 Mcu.PinsNb=30
-Mcu.ThirdParty0=STMicroelectronics.FP-SNS-FLIGHT1.5.0.0
+Mcu.ThirdParty0=STMicroelectronics.FP-SNS-FLIGHT1.5.0.1
 Mcu.ThirdParty1=STMicroelectronics.X-CUBE-BLE2.3.3.0
 Mcu.ThirdParty2=STMicroelectronics.X-CUBE-BLEMGR.2.0.0
 Mcu.ThirdParty3=STMicroelectronics.X-CUBE-TOF1.3.2.0
@@ -241,64 +241,64 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,CLKPhase,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.BSP.number=5
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.DataOoExchangeJjSTM32IiMetaDataManager_Checked=true
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.DeviceJjFLIGHT1IiApplications_Checked=true
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.ENABLE_MDM_PRINTF=1
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.FLIGHT1IiApplicationsCcDeviceJjApplication=FLIGHT1Ii53L3A2IiFOTA
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.IPParameters=ENABLE_MDM_PRINTF,STM32IiMetaDataManagerCcDataOoExchangeJjSTM32IiMetaDataManager,FLIGHT1IiApplicationsCcDeviceJjApplication
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0.STM32IiMetaDataManagerCcDataOoExchangeJjSTM32IiMetaDataManager=true
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.STBoard=false
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.api=Unknown
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.component=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.condition=SEMFLIGHT1IiApplicationsCcDeviceJjApplicationJjFLIGHT1Ii53L3A2 | SEMFLIGHT1IiApplicationsCcDeviceJjApplicationJjFLIGHT1Ii53L3A2IiFOTA
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.instance=TIM2
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.ip=TIM.*
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.mode=Internal Clock
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.name=TIMER_LED
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.semaphore=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.00.BSP.solution=TIM2
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.STBoard=false
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.api=Unknown
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.component=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.condition=SEMFLIGHT1IiApplicationsCcDeviceJjApplicationJjFLIGHT1Ii53L3A2 | SEMFLIGHT1IiApplicationsCcDeviceJjApplicationJjFLIGHT1Ii53L3A2IiFOTA
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.instance=TIM3
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.ip=TIM.*
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.mode=Internal Clock
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.name=TIMER_ToF
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.semaphore=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.01.BSP.solution=TIM3
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.STBoard=false
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.api=BSP_COMMON_DRIVER
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.component=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.condition=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.instance=PC13
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.ip=GPIO
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.mode=EXTI
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.name=BSP BUTTON
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.semaphore=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.02.BSP.solution=PC13
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.STBoard=false
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.api=BSP_COMMON_DRIVER
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.component=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.condition=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.instance=USART2
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.ip=UART|USART|LPUART
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.mode=Asynchronous
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.name=BSP USART
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.semaphore=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.03.BSP.solution=USART2
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.STBoard=false
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.api=BSP_COMMON_DRIVER
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.component=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.condition=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.instance=PA5
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.ip=GPIO
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.mode=Output
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.name=BSP LED
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.semaphore=
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.04.BSP.solution=PA5
-STMicroelectronics.FP-SNS-FLIGHT1.5.0.0_SwParameter=FLIGHT1IiApplicationsCcDeviceJjApplication\:FLIGHT1Ii53L3A2IiFOTA;STM32IiMetaDataManagerCcDataOoExchangeJjSTM32IiMetaDataManager\:true;
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.BSP.number=5
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.DataOoExchangeJjSTM32IiMetaDataManager_Checked=true
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.DeviceJjFLIGHT1IiApplications_Checked=true
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.ENABLE_MDM_PRINTF=1
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.FLIGHT1IiApplicationsCcDeviceJjApplication=FLIGHT1Ii53L3A2IiFOTA
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.IPParameters=STM32IiMetaDataManagerCcDataOoExchangeJjSTM32IiMetaDataManager,FLIGHT1IiApplicationsCcDeviceJjApplication,ENABLE_MDM_PRINTF
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1.STM32IiMetaDataManagerCcDataOoExchangeJjSTM32IiMetaDataManager=true
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.STBoard=false
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.api=Unknown
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.component=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.condition=SEMFLIGHT1IiApplicationsCcDeviceJjApplicationJjFLIGHT1Ii53L3A2 | SEMFLIGHT1IiApplicationsCcDeviceJjApplicationJjFLIGHT1Ii53L3A2IiFOTA
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.instance=TIM2
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.ip=TIM.*
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.mode=Internal Clock
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.name=TIMER_LED
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.semaphore=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.10.BSP.solution=TIM2
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.STBoard=false
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.api=Unknown
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.component=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.condition=SEMFLIGHT1IiApplicationsCcDeviceJjApplicationJjFLIGHT1Ii53L3A2 | SEMFLIGHT1IiApplicationsCcDeviceJjApplicationJjFLIGHT1Ii53L3A2IiFOTA
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.instance=TIM3
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.ip=TIM.*
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.mode=Internal Clock
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.name=TIMER_ToF
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.semaphore=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.11.BSP.solution=TIM3
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.STBoard=false
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.api=BSP_COMMON_DRIVER
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.component=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.condition=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.instance=PC13
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.ip=GPIO
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.mode=EXTI
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.name=BSP BUTTON
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.semaphore=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.12.BSP.solution=PC13
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.STBoard=false
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.api=BSP_COMMON_DRIVER
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.component=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.condition=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.instance=USART2
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.ip=UART|USART|LPUART
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.mode=Asynchronous
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.name=BSP USART
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.semaphore=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.13.BSP.solution=USART2
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.STBoard=false
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.api=BSP_COMMON_DRIVER
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.component=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.condition=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.instance=PA5
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.ip=GPIO
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.mode=Output
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.name=BSP LED
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.semaphore=
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.14.BSP.solution=PA5
+STMicroelectronics.FP-SNS-FLIGHT1.5.0.1_SwParameter=FLIGHT1IiApplicationsCcDeviceJjApplication\:FLIGHT1Ii53L3A2IiFOTA;STM32IiMetaDataManagerCcDataOoExchangeJjSTM32IiMetaDataManager\:true;
 STMicroelectronics.X-CUBE-BLE2.3.3.0.BSP.number=4
 STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjController=true
 STMicroelectronics.X-CUBE-BLE2.3.3.0.BlueNRGAa2CcWirelessJjBlueNRGAa2JjHCIIiTL=Basic
@@ -388,10 +388,10 @@ USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
-VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DataOoExchangeJjSTM32IiMetaDataManager_1.7.0_5.0.0.Mode=DataOoExchangeJjSTM32IiMetaDataManager
-VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DataOoExchangeJjSTM32IiMetaDataManager_1.7.0_5.0.0.Signal=STMicroelectronics.FP-SNS-FLIGHT1_VS_DataOoExchangeJjSTM32IiMetaDataManager_1.7.0_5.0.0
-VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.0.Mode=DeviceJjFLIGHT1IiApplications
-VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.0.Signal=STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.0
+VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DataOoExchangeJjSTM32IiMetaDataManager_1.7.0_5.0.1.Mode=DataOoExchangeJjSTM32IiMetaDataManager
+VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DataOoExchangeJjSTM32IiMetaDataManager_1.7.0_5.0.1.Signal=STMicroelectronics.FP-SNS-FLIGHT1_VS_DataOoExchangeJjSTM32IiMetaDataManager_1.7.0_5.0.1
+VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.1.Mode=DeviceJjFLIGHT1IiApplications
+VP_STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.1.Signal=STMicroelectronics.FP-SNS-FLIGHT1_VS_DeviceJjFLIGHT1IiApplications_5.0.0_5.0.1
 VP_STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0.Mode=WirelessJjBlueNRGAa2
 VP_STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0.Signal=STMicroelectronics.X-CUBE-BLE2_VS_WirelessJjBlueNRGAa2_3.3.0
 VP_STMicroelectronics.X-CUBE-BLEMGR_VS_BLEIiFeaturesJjSTM32IiBLEIiManager_1.8.0_2.0.0.Mode=BLEIiFeaturesJjSTM32IiBLEIiManager
